@@ -6,8 +6,9 @@ linstaller (1.51.0-1) UNRELEASED; urgency=low
     terminal window)
   * Added copyright (python-stdeb didn't have created one :/)
   * Added new live-config-linstaller package.
+  * partdisks: do not fail if no swap is available/selected
 
- -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Sun, 14 Aug 2011 12:22:17 +0200
+ -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Sun, 14 Aug 2011 13:50:58 +0200
 
 linstaller (1.50.0-1) emily; urgency=low
 
